--- a/index.css
+++ b/index.css
@@ -135,6 +135,14 @@ section:first-of-type {
   grid-template-rows: repeat(2, 1fr);
 }
 
+.services_list_reverse {
+  display: grid;
+  height: 620px;
+  gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
 .services_item {
   background-color: #D9D9D9;
   grid-column: span 1;
@@ -142,7 +150,13 @@ section:first-of-type {
   border-radius: 16px;
 }
 
-.services_item:nth-child(1) {
+.services_list .services_item:nth-child(1) {
+  grid-column: span 2;
+  grid-row: span 2;
+  border-radius: 24px;
+}
+
+.services_list_reverse .services_item:nth-child(3) {
   grid-column: span 2;
   grid-row: span 2;
   border-radius: 24px;
@@ -293,4 +307,12 @@ footer {
 
 .development_card_button {
   text-align: right;
+}
+
+.services_page {
+  margin-top: 64px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
 }
