--- a/index.css
+++ b/index.css
@@ -316,3 +316,20 @@ footer {
   flex-direction: column;
   gap: 64px;
 }
+
+.platforms {
+  margin-top: 64px;
+}
+
+.platforms_list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
+
+.platforms_item {
+  height: 620px;
+
+  background-color: #D9D9D9;
+  border-radius: 16px;
+}
