--- a/index.css
+++ b/index.css
@@ -333,3 +333,31 @@ footer {
   background-color: #D9D9D9;
   border-radius: 16px;
 }
+
+.residents {
+  margin-top: 64px;
+}
+
+.residents_list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+
+.residents_item {
+  width: 400px;
+  height: 207px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 32px;
+  border: 1px solid black;
+}
+
+.residents_item img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
