--- a/index.css
+++ b/index.css
@@ -254,9 +254,13 @@ section:first-of-type {
 }
 
 footer {
-  padding: 160px 80px;
+  margin: 160px 80px 200px;
+  padding: 32px 0;
+
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+
+  border-top: 1px solid black;
 }
 
 .footer_nav ul {
@@ -360,4 +364,23 @@ footer {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.vacancies-page {
+  margin-top: 64px;
+}
+
+.list_controls {
+  display: flex;
+  justify-content: end;
+  gap: 24px;
+}
+
+.list_controls_button {
+  width: 44px;
+  height: 44px;
+
+  background-color: #D9D9D9;
+  border-radius: 40px;
+  border: none;
 }
