--- a/index.css
+++ b/index.css
@@ -384,3 +384,18 @@ footer {
   border-radius: 40px;
   border: none;
 }
+
+.partners {
+  margin-top: 64px;
+
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  gap: 0 40px;
+}
+
+.partners_more {
+  margin-top: 24px;
+}
