--- a/index.css
+++ b/index.css
@@ -215,6 +215,12 @@ section:first-of-type {
   gap: 40px;
 }
 
+.news_list_reverse {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
 .news_item .news-img {
   background-color: #D9D9D9;
   width: 290px;
@@ -222,7 +228,12 @@ section:first-of-type {
   border-radius: 16px;
 }
 
-.news_item:nth-child(1) .news-img {
+.news_list .news_item:nth-child(1) .news-img {
+  width: 620px;
+  height: 620px;
+}
+
+.news_list_reverse .news_item:nth-child(3) .news-img {
   width: 620px;
   height: 620px;
 }
@@ -398,4 +409,12 @@ footer {
 
 .partners_more {
   margin-top: 24px;
+}
+
+.news-page {
+  margin-top: 64px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
