--- a/index.css
+++ b/index.css
@@ -429,3 +429,23 @@ footer {
 .contacts_page .contacts_left h1 {
   margin: 0;
 }
+
+.account_settings {
+  margin-top: 64px;
+}
+
+.account_settings_form {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.input input {
+  width: 510px;
+  padding-bottom: 8px;
+
+  font-size: 20px;
+
+  border: 0;
+  border-bottom: 1px solid black;
+}
