feat: use react

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap);
+
 body {
   font-family: "Manrope", serif;
   font-optical-sizing: auto;
@@ -396,7 +398,7 @@ footer {
   border: none;
 }
 
-.partners {
+.partners_page {
   margin-top: 64px;
 
   display: grid;
